fixed layout issues for mobile devices

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,11 @@
   margin: 0;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 button {
   outline: none;
   border: none;
@@ -26,11 +31,11 @@ body {
 }
 
 main {
+  padding: 50px 1rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
-  height: 100vh;
   background-image: linear-gradient(var(--soft-violet), var(--soft-blue));
 }
 
@@ -43,7 +48,7 @@ main {
 .grid {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 100%;
+  grid-template-rows: 1fr;
   gap: 30px;
   background-color: white;
   border-radius: 20px;
@@ -166,19 +171,19 @@ main {
 .attribution {
   font-size: 11px;
   text-align: center;
-  padding: 50px 0;
-  color: #eeeeee;
+  padding: 50px 1rem;
+  color: #dddddd;
 }
 
 .attribution a {
-  color: hsl(227, 45%, 78%);
+  color: #ffffff;
 }
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   .container {
     width: 100%;
-    padding: 150px 1rem 0;
+    padding: 150px 1rem 60px;
   }
 
   .illustration {
@@ -196,8 +201,8 @@ main {
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
-  .container {
-    padding: 100px 1rem;
+  main {
+    padding: 160px 1rem;
   }
 
   .illustration {
@@ -207,6 +212,15 @@ main {
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
+  main {
+    height: 100%;
+    justify-content: center;
+  }
+
+  .container {
+    padding: 2rem 0;
+  }
+
   .grid {
     grid-template-columns: repeat(2, 1fr);
   }
